After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 693355 - gst-template fails to build with 1.0 because of gstcontroller changes, PWG sample code needs updating
gst-template fails to build with 1.0 because of gstcontroller changes, PWG sa...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: documentation
1.0.5
Other Linux
: Normal minor
: 1.5.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-02-07 19:34 UTC by Pather
Modified: 2015-06-10 12:20 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Pather 2013-02-07 19:34:55 UTC
When I downloaded gstreamer PWG code with git, I couldn't have autogen.sh passed since the sample code refers to gstcontroller class inside. I checked website and gstreamer 1.0 source code, and found there was no gstcontroller.h file any more. 

After I have the gstcontroller related code commented out, the autogen.sh/make/make install work as described. Do I miss something here or does PWG sample code need to be updated for this?
Comment 1 Tim-Philipp Müller 2013-02-07 19:42:51 UTC
Could you post the exact build log / error please, ideally starting from autogen.sh?
Comment 2 Pather 2013-02-07 20:06:34 UTC
Here you are:

zimmer@ubuntu:~/Downloads/gst-template/gst-plugin$ ./autogen.sh
autoreconf: Entering directory `.'
autoreconf: configure.ac: not using Gettext
autoreconf: running: aclocal --force 
autoreconf: configure.ac: tracing
autoreconf: running: libtoolize --install --copy --force
libtoolize: putting auxiliary files in `.'.
libtoolize: copying file `./config.guess'
libtoolize: copying file `./config.sub'
libtoolize: copying file `./install-sh'
libtoolize: copying file `./ltmain.sh'
libtoolize: Consider adding `AC_CONFIG_MACRO_DIR([m4])' to configure.ac and
libtoolize: rerunning libtoolize, to keep the correct libtool macros in-tree.
libtoolize: Consider adding `-I m4' to ACLOCAL_AMFLAGS in Makefile.am.
autoreconf: running: /usr/bin/autoconf --force
autoreconf: running: /usr/bin/autoheader --force
autoreconf: running: automake --add-missing --copy --force-missing
autoreconf: running: ./config.status --recheck
running CONFIG_SHELL=/bin/bash /bin/bash ./configure --no-create --no-recursion
checking for a BSD-compatible install... /usr/bin/install -c
checking whether build environment is sane... yes
checking for a thread-safe mkdir -p... /bin/mkdir -p
checking for gawk... no
checking for mawk... mawk
checking whether make sets $(MAKE)... yes
checking whether to enable maintainer-specific portions of Makefiles... yes
checking for gcc... gcc
checking whether the C compiler works... yes
checking for C compiler default output file name... a.out
checking for suffix of executables... 
checking whether we are cross compiling... no
checking for suffix of object files... o
checking whether we are using the GNU C compiler... yes
checking whether gcc accepts -g... yes
checking for gcc option to accept ISO C89... none needed
checking for style of include used by make... GNU
checking dependency style of gcc... gcc3
checking build system type... i686-pc-linux-gnu
checking host system type... i686-pc-linux-gnu
checking how to print strings... printf
checking for a sed that does not truncate output... /bin/sed
checking for grep that handles long lines and -e... /bin/grep
checking for egrep... /bin/grep -E
checking for fgrep... /bin/grep -F
checking for ld used by gcc... /usr/bin/ld
checking if the linker (/usr/bin/ld) is GNU ld... yes
checking for BSD- or MS-compatible name lister (nm)... /usr/bin/nm -B
checking the name lister (/usr/bin/nm -B) interface... BSD nm
checking whether ln -s works... yes
checking the maximum length of command line arguments... 1572864
checking whether the shell understands some XSI constructs... yes
checking whether the shell understands "+="... yes
checking how to convert i686-pc-linux-gnu file names to i686-pc-linux-gnu format... func_convert_file_noop
checking how to convert i686-pc-linux-gnu file names to toolchain format... func_convert_file_noop
checking for /usr/bin/ld option to reload object files... -r
checking for objdump... objdump
checking how to recognize dependent libraries... pass_all
checking for dlltool... no
checking how to associate runtime and link libraries... printf %s\n
checking for ar... ar
checking for archiver @FILE support... @
checking for strip... strip
checking for ranlib... ranlib
checking command to parse /usr/bin/nm -B output from gcc object... ok
checking for sysroot... no
checking for mt... mt
checking if mt is a manifest tool... no
checking how to run the C preprocessor... gcc -E
checking for ANSI C header files... yes
checking for sys/types.h... yes
checking for sys/stat.h... yes
checking for stdlib.h... yes
checking for string.h... yes
checking for memory.h... yes
checking for strings.h... yes
checking for inttypes.h... yes
checking for stdint.h... yes
checking for unistd.h... yes
checking for dlfcn.h... yes
checking for objdir... .libs
checking if gcc supports -fno-rtti -fno-exceptions... no
checking for gcc option to produce PIC... -fPIC -DPIC
checking if gcc PIC flag -fPIC -DPIC works... yes
checking if gcc static flag -static works... yes
checking if gcc supports -c -o file.o... yes
checking if gcc supports -c -o file.o... (cached) yes
checking whether the gcc linker (/usr/bin/ld) supports shared libraries... yes
checking whether -lc should be explicitly linked in... no
checking dynamic linker characteristics... GNU/Linux ld.so
checking how to hardcode library paths into programs... immediate
checking whether stripping libraries is possible... yes
checking if libtool supports shared libraries... yes
checking whether to build shared libraries... yes
checking whether to build static libraries... yes
checking for pkg-config...  
checking for pkg-config... /usr/bin/pkg-config
checking pkg-config is at least version 0.9.0... yes
checking for GST... yes
checking to see if compiler understands -Wall... yes
configure: creating ./config.status
autoreconf: running: ./config.status
config.status: creating Makefile
config.status: creating src/Makefile
config.status: creating config.h
config.status: config.h is unchanged
config.status: executing depfiles commands
config.status: executing libtool commands
autoreconf: running: make
make  all-recursive
make[1]: Entering directory `/home/zimmer/Downloads/gst-template/gst-plugin'
Making all in src
make[2]: Entering directory `/home/zimmer/Downloads/gst-template/gst-plugin/src'
/bin/bash ../libtool  --tag=CC --tag=disable-static  --mode=compile gcc -DHAVE_CONFIG_H -I. -I..    -pthread -I/usr/include/gstreamer-1.0 -I/usr/include/glib-2.0 -I/usr/lib/i386-linux-gnu/glib-2.0/include   -Wall -g -O2 -Wall -MT libgstmyfilter_la-gstmyfilter.lo -MD -MP -MF .deps/libgstmyfilter_la-gstmyfilter.Tpo -c -o libgstmyfilter_la-gstmyfilter.lo `test -f 'gstmyfilter.c' || echo './'`gstmyfilter.c
libtool: compile:  gcc -DHAVE_CONFIG_H -I. -I.. -pthread -I/usr/include/gstreamer-1.0 -I/usr/include/glib-2.0 -I/usr/lib/i386-linux-gnu/glib-2.0/include -Wall -g -O2 -Wall -MT libgstmyfilter_la-gstmyfilter.lo -MD -MP -MF .deps/libgstmyfilter_la-gstmyfilter.Tpo -c gstmyfilter.c  -fPIC -DPIC -o .libs/libgstmyfilter_la-gstmyfilter.o
gstmyfilter.c:41:42: fatal error: gst/controller/gstcontroller.h: No such file or directory
compilation terminated.
make[2]: *** [libgstmyfilter_la-gstmyfilter.lo] Error 1
make[2]: Leaving directory `/home/zimmer/Downloads/gst-template/gst-plugin/src'
make[1]: *** [all-recursive] Error 1
make[1]: Leaving directory `/home/zimmer/Downloads/gst-template/gst-plugin'
make: *** [all] Error 2
autoreconf: make failed with exit status: 2
autogen.sh failed
Comment 3 Pather 2013-02-07 20:09:03 UTC
As far as I know, it seems Gstcontroller has been merged into GstObject. See the link at: http://cgit.freedesktop.org/gstreamer/gstreamer/tree/docs/random/porting-to-1.0.txt
Comment 4 Tim-Philipp Müller 2015-06-10 12:20:24 UTC
That file wasn't even built, but let's fix it anyway.

commit c4f9a1897a254d640e822ad23df96ec74b0645b0
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Wed Jun 10 13:17:18 2015 +0100

    gst-plugin: transform: fix code
    
    Even if it's not built by default.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=693355