gst-plugin: transform: fix code

Even if it's not built by default.

https://bugzilla.gnome.org/show_bug.cgi?id=693355